# python-clean-arch

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.api.yml  docker-compose.db.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  ruff.toml
app/: main.py
app/api/http/: __init__.py  error_handler.py
app/api/http/dependencies/: user.py
app/api/http/router/: health.py  user.py
app/api/http/schema/: user.py
app/config/: logger.py  settings.py
app/core/: error.py  type.py
app/core/constant/: user.py
app/core/enum/: error.py  logging.py
app/core/model/: user.py
app/core/protocol/repository/: role.py  user.py
app/core/utility/: user.py
app/repository/memory/: role.py  user.py
app/repository/psql/: connection.py
app/repository/psql/dao/: role.py  user.py
app/repository/psql/model/: __init__.py  base.py  user.py
app/service/: user.py
app/utility/: decorator.py
scripts/: init_db_pg.sh
tests/unit/user/: test_user_memory_repositories.py  test_user_service.py  test_user_utility.py
